--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
   <head>
     <title>Coin Flip</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
     <h1 id="result"></h1>
     <button id="flip-button">Flip Coin</button>
+     <script src="main.js"></script>
   </body>
   <script src="main.js"></script>
 </html>
